--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -1,3 +1,149 @@
-.profile-dropdown {
-  position: absolute;
+
+.browse-btn { 
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  background-color: black;
+  color: white;
+  padding: 12px 24px;
+  border: 2px solid rgb(146, 255, 157);
+  border-radius: 10px;
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+  position: absolute; 
+  top: 16px; 
+  right: 32px; 
+}
+
+.browse-btn:hover {
+  background-color: #222;
+  transform: scale(1.03);
+}
+
+.browse-restaurant-btn {
+  display:flex;
+  align-items: center;
+  gap: 8px;
+  background-color: black;
+  color: white;
+  padding: 12px 24px;
+  border: 2px solid rgb(146, 255, 157);
+  border-radius: 10px;
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+  top: 16px; 
+  right: 32px; 
+}
+
+.browse-icon {
+  align-items: center;
+  font-size: 32px; 
+}
+
+.nav-button-group {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.nav-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 16px 32px;
+  background-color: white;
+  border-bottom: 1px solid #ccc;
+  flex-wrap: wrap;
+  gap: 16px;
+  position: relative; 
+}
+
+.nav-left {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+
+.nav-link {
+  font-size: 18px;
+  font-weight: bold;
+  color: black;
+  text-decoration: none;
+  margin-bottom: 10px;
+}
+
+.profile-button-wrapper {
+  margin-left: 2px;
+}
+
+.search-bar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  align-items: center;
+  flex: 1;
+  max-width: 100%;
+  margin-top: 100px;
+}
+
+.input-group {
+  display: flex;
+  align-items: center;
+  background: white;
+  padding: 12px 16px;
+  border-radius: 10px;
+  flex: 1;
+  border: 1px solid #ccc;
+}
+
+.input-group .icon {
+  margin-right: 8px;
+  color: gray;
+}
+
+.address-input {
+  border: none;
+  outline: none;
+  width: 100%;
+  font-size: 16px;
+}
+
+.search-btn {
+  background-color: black;
+  color: white;
+  padding: 12px 24px;
+  border: 2px solid rgb(146, 255, 157);
+  border-radius: 10px;
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+}
+
+.search-btn:hover {
+  background-color: #222;
+}
+
+.login-btn,
+.signup-btn {
+  background-color: black;
+  color: white;
+  padding: 12px 24px;
+  border: 2px solid rgb(146, 255, 157) !important;
+  border-radius: 10px;
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.login-btn:hover,
+.signup-btn:hover {
+  background-color: #222;
+  transform: scale(1.03);
 }
